[package]
name = "lol_kill_google_action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.22.0", features = ["full"]}
lol-game-client-api = { path = "../LoLGameClientAPI" }
anyhow = "1.0.66"
thiserror = "1.0.37"